# config-generator

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  Renderer  imgui.ini
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: Makefile  Renderer  compile_commands.json  imgui.ini  main.cpp
src/.cache/clangd/index/: __stdarg___gnuc_va_list.h.471349D315D40F6D.idx  __stdarg___va_copy.h.FD7A61FCEE6A3C53.idx  __stdarg_header_macro.h.87234757EAB7D283.idx  __stdarg_va_arg.h.9C9829D132095BB9.idx  __stdarg_va_copy.h.409C6C04919C0CB0.idx  __stdarg_va_list.h.0F8AA497A56B1618.idx  __stddef_header_macro.h.D00B609877A10604.idx  __stddef_max_align_t.h.0A84BEF733CBFBA5.idx  __stddef_null.h.47B2531AC5B95B10.idx  __stddef_nullptr_t.h.00EE44233E0EBBF4.idx  __stddef_offsetof.h.F0732B437813ACAB.idx  __stddef_ptrdiff_t.h.FB0646BDCD706AD2.idx  __stddef_size_t.h.C68B7AF11C27D0D1.idx  __stddef_wchar_t.h.42C12F46AACE87A5.idx  __wmmintrin_aes.h.1B36423D1CD54C4F.idx  __wmmintrin_pclmul.h.8C10125E110A6700.idx  adcintrin.h.D9BE30DF17DF5860.idx  adxintrin.h.83B3266D2B7FD7E9.idx  alloca.h.793370BF9878CFB6.idx  amxcomplexintrin.h.E986DE8A6CCD45AC.idx  amxfp16intrin.h.23A3D96F0AD73441.idx  amxintrin.h.4484A8493E9F747F.idx  avx2intrin.h.5CFF08093A651436.idx  avx512bf16intrin.h.F7D14AD64647CF93.idx  avx512bitalgintrin.h.0D70D9E1162352EF.idx  avx512bwintrin.h.894B71E3D69F5CB9.idx  avx512cdintrin.h.4C3B9A6A1C563634.idx  avx512dqintrin.h.AD262782E95C767B.idx  avx512fintrin.h.506C8437BB022F27.idx  avx512fp16intrin.h.D42158F0A380540E.idx  avx512ifmaintrin.h.1015E9712A84E6C9.idx  avx512ifmavlintrin.h.DDF4B4F0E8757AA1.idx  avx512vbmi2intrin.h.97D703E252DB8655.idx  avx512vbmiintrin.h.E61A780CF2F1515B.idx  avx512vbmivlintrin.h.B934244C2D32BFC1.idx  avx512vlbf16intrin.h.6FE2DC75DE0C5F97.idx  avx512vlbitalgintrin.h.1E6B0CF6D5DB56D8.idx  avx512vlbwintrin.h.85A8FAEBDD3FA8C5.idx  avx512vlcdintrin.h.FEA9CD1D0B8EF0A4.idx  avx512vldqintrin.h.6B0C9354EBD20515.idx  (+123 more)
src/Core/: Application.cpp  Application.h
